--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Title</title>
 </head>
 <style>
+    * {
+        box-sizing: border-box;
+    }
     .container {
         display: flex;
         flex-direction: column;
         align-items: center;
+        border: 1px solid black;
+        width: 100%;
     }
 
     .word-block {
@@ -19,6 +25,12 @@
         height: 50px;
         border: 1px solid black;
         margin-bottom: 20px;
+    }
+
+    @media only screen and (max-width: 600px) {
+        .word-block {
+            width: 200px;
+        }
     }
 </style>
 <body>
