--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         margin-bottom: 20px;
     }
 
+    #next {
+        margin-top: 10px;
+        height: 50px;
+        width: 150px;
+    }
+
     @media only screen and (max-width: 600px) {
         .word-block {
             width: 200px;
@@ -37,6 +43,7 @@
   <div id="ge" class="word-block"></div>
   <div id="ru" class="word-block"></div>
   <div id="en" class="word-block"></div>
+  <button id="next">Next Word</button>
 </div>
 <script src="index.js"></script>
 </body>
